# AniMatrix

./: README.md  main.py  pipeline_automation.py  pyproject.toml  requirements.txt
static/: app.js  index.html  style.css
