[project]
name = "praveen-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "uvicorn>=0.49.0",
    "google-genai>=0.1.1",
    "python-dotenv>=1.0.1",
    "moviepy>=1.0.3",
    "manim>=0.18.1",
]
